new file:   Canvas Bag Designs.html 	new file:   Contacts & Payments.html 	new file:   Cornhole Designs & Stickers.html 	new file:   Images/BottleSticker.png 	new file:   Images/CanvasBag.png 	new file:   Images/Cornbag.jpg 	new file:   Images/Cornhole.png 	new file:   Images/Square-Payment.jpg 	new file:   Images/Stickers.png 	new file:   Images/WineBag.png 	modified:   T-shirts & Masks.html 	modified:   Wine Glass & Coffee Mugs.html 	modified:   es.css 	modified:   index.html

--- a/es.css
+++ b/es.css
@@ -104,9 +104,19 @@ nav ul {
     margin-bottom: 5%;
 }
 
-.main-content img {
+/* .main-content img {
     max-width: 60%;
     border-radius: 50%;
+} */
+
+img {
+    max-width: 60%;
+    border-radius: 50%;
+}
+
+.square {
+    max-width: 60%;
+    border-radius: 20%;
 }
 
 .wrapper {
@@ -117,6 +127,12 @@ nav ul {
 }
 
 .TM ul{
+    text-align: center;
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.TM {
     text-align: center;
     list-style-type: none;
     font-size: 20px;
